Fixed date formatting

--- a/views/viewpost.ejs
+++ b/views/viewpost.ejs
@@ -3,7 +3,7 @@
 	<div class="col"></div>
 	<div class="col-8 py-1 bg-light text-dark border border-dark">
 		<h1><%= post.author %></h1>
-		<sub><%= post.date %></sub>
+		<sub><%= post.date.slice(5, 16) %></sub>
 		<p><%= post.postContent %></p>
 	</div>
 	<div class="col"></div>
