--- a/views/archive.ejs
+++ b/views/archive.ejs
@@ -6,10 +6,10 @@
 		<% posts.forEach(function(post) { %>
 			<div class="card mb-1 py-1 px-2">
 				<div class="card-body p-0">
-					<h4 class="card-title my-0">Placeholder</h4>
+					<h4 class="card-title text-center my-0">Placeholder</h4>
 					<h6 class="card-subtitle text-muted my-0"><%= post.date %></h6>
-					<div class="col">
-						<p class="card-test my-1 py-1 px-2 border"><%= post.postContent %></p>
+					<div class="col my-2 p-0">
+						<p class="card-text mb-1 py-1 px-2 border"><%= post.postContent.substring(50) %></p>
 						<div class="d-flex flex-row-reverse">
 							<a href="/archive/<%= post._id %>" class="btn btn-secondary btn-sm text-right">Read full generation</a>
 						</div>
