--- a/views/viewpost.ejs
+++ b/views/viewpost.ejs
@@ -2,9 +2,16 @@
 <div class="row my-1">
 	<div class="col"></div>
 	<div class="col-8 py-1 bg-light text-dark border border-dark">
-		<h1><%= post.author %></h1>
-		<sub><%= post.date.slice(5, 16) %></sub>
-		<p><%= post.postContent %></p>
+		<h1 class="text-center">Placeholder</h1>
+		<div class="card mb-1 py-1 px-2">
+			<div class="card-body p-0">
+				<h4 class="card-title my-0"><%= post.author %></h4>
+				<h6 class="card-subtitle text-muted my-0"><%= post.date.slice(5, 16) %></h6>
+				<div class="col my-2 p-0">
+					<p class="card-text mb-1 py-1 px-2 border"><%= post.postContent %></p>
+				</div>
+			</div>
+		</div>
 	</div>
 	<div class="col"></div>
 </div>
